--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = [
+    "annoy>=1.17.0"
+]
 
 [project.optional-dependencies]
 dev = [
