--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "semantic_cache"
+name = "semantic_functools"
 version = "0.1.0"
 description = "A simple semantic cache decorator."
 authors = [
